--- a/package.json
+++ b/package.json
@@ -23,8 +23,8 @@
     "uuid": "d932b88b-796a-4603-93f6-9cd7584484d0"
   },
   "engines": {
-    "node": ">=14.19.1 <=18.x.x",
-    "npm": ">=6.0.0"
+    "node": "16.x",
+    "npm": "8.x"
   },
   "license": "MIT"
 }
