--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "@strapi/plugin-users-permissions": "4.7.1",
     "@strapi/provider-upload-cloudinary": "^4.7.1",
     "@strapi/strapi": "4.7.1",
-    "mysql": "2.18.1"
+    "mysql": "2.18.1",
+    "strapi-plugin-entity-relationship-chart": "^4.1.0"
   },
   "author": {
     "name": "A Strapi developer"
