--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "@strapi/provider-upload-cloudinary": "^4.7.1",
     "@strapi/strapi": "4.7.1",
     "mysql": "2.18.1",
-    "strapi-plugin-entity-relationship-chart": "^4.1.0"
+    "strapi-plugin-entity-relationship-chart": "^4.1.0",
+    "strapi-plugin-populate-deep": "^2.0.0"
   },
   "author": {
     "name": "A Strapi developer"
